# climate-app-lst-workflow

./: .gitignore  README.md  call_api.http  deploy.http  get_asset_values.cwl  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: eocis_test_lines.geojson  eocis_test_polygons.geojson  test_polygons.geojson  test_polygons_noid.geojson
docs/: api_input.json  api_input_nostac.json  call_api.http  deploy.http  example_workflow_input.json  london_points.geojson  points.geojson  toil_input.yaml  uk_points_2.csv  uk_points_2.geojson  workflow_input.json  workflow_input_geodowd.json  workflow_input_s3.json  workflow_input_stacitems.json  world_points.geojson
src/: Dockerfile  main.py  requirements.txt  samconfig.toml  template.yaml  ukcp18.ipynb
src/app/: asset_data.py  create_dataarray.py  create_response.py  data_models.py  extra.py  get_values.py  get_values_logger.py  lambda_handler.py  load_cogs.py  load_data.py  load_points.py  local_api.py  main.py  points_data.py  requirements.txt  search_stac.py  stac_parsing.py
