[project]
name = "LST_Workflow"
version = "0.1.0"
description = "Getting values from cog files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.8",
    "boto3>=1.35.40",
    "fastapi>=0.115.2",
    "fsspec>=2024.9.0",
    "geopandas>=1.0.1",
    "kerchunk>=0.2.7",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pystac-client>=0.8.5",
    "pystac>=1.11.0",
    "requests>=2.32.0",
    "rioxarray>=0.18.1",
    "s3fs>=0.4.2",
    "shapely>=2.0.6",
    "shortuuid>=1.0.13",
    "xarray==2024.11.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 80


[tool.ruff.lint]
extend-select=[]
select = ["D103","E","F", "UP", "B","SIM","I",]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "cwltool==3.1.20240508115724",
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",

]
